--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 # Container to host OOMMF
 #
-# Takes the most recent version on https://github.com/fangohr/oommf.git
+# Takes the most recent modified version on https://github.com/nazar-si/oommf.git
 FROM ubuntu:22.04
 
 # Avoid asking for geographic data when installing tzdata.
@@ -19,7 +19,7 @@ USER oommfuser
 
 # Compile OOMMF and create OOMMFTCL environment variable
 WORKDIR /usr/local
-RUN git clone --depth 1 https://github.com/fangohr/oommf.git
+RUN git clone --depth 1 https://github.com/nazar-si/oommf.git
 WORKDIR /usr/local/oommf
 
 # This Makefile target builds oommf
