--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,10 +1,10 @@
 build: Dockerfile Makefile
-	docker build --no-cache -t ubermag/oommf:latest .
+	docker build --no-cache -t field/oommf:latest .
 
 run:
-	docker run --rm -ti -v `pwd`:/io ubermag/oommf:latest bash
+	docker run --rm -ti -v `pwd`:/io field/oommf:latest bash
 
 test:
-	docker run --rm -v `pwd`:/io ubermag/oommf:latest oommf boxsi +fg /usr/local/oommf/oommf/app/oxs/examples/stdprob3.mif -exitondone 1
+	docker run --rm -v `pwd`:/io field/oommf:latest oommf boxsi +fg /usr/local/oommf/oommf/app/oxs/examples/stdprob3.mif -exitondone 1
 
 
